issue #56 : backup manager enhacements + various fixes
