# src/Api/Backup/V1/Model/Mapper/CreateResultToCreateResponse.php
@@ -16,6 +16,7 @@ namespace WEM\SmartgearBundle\Api\Backup\V1\Model\Mapper;
 
 use WEM\SmartgearBundle\Api\Backup\V1\Model\CreateResponse;
 use WEM\SmartgearBundle\Backup\Model\Results\CreateResult;
+use WEM\SmartgearBundle\Classes\Util;
 
 class CreateResultToCreateResponse
 {
@@ -25,6 +26,10 @@ class CreateResultToCreateResponse
             'timestamp' => $createResult->getBackup()->getFile()->ctime,
             'path' => $createResult->getBackup()->getFile()->basename,
             'source' => $createResult->getBackup()->getSource(),
+            'size' => [
+                'raw' => $createResult->getBackup()->getFile()->size,
+                'human_readable' => Util::humanReadableFilesize((int) $createResult->getBackup()->getFile()->size),
+            ],
         ]);
 
         return $createResponse;
